Update ALCS Edit Submission for Covenants
* Copy over covenants when creating draft
* Delete when publishing

--- a/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
@@ -154,6 +154,14 @@
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
       ></app-incl-proposal>
+      <app-cove-proposal
+        *ngIf="applicationSubmission.typeCode === 'COVE'"
+        [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      ></app-cove-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
