--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pfrs/pfrs.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pfrs/pfrs.component.html
@@ -1,6 +1,12 @@
 <ng-content></ng-content>
+<div></div>
 <div>
-  <div class="subheading2">Use End Date</div>
+  <div class="subheading2">Use End Date (Placement of Fill)</div>
+  {{ component.endDate2 | date }}
+  <app-no-data *ngIf="component.endDate2 === null || component.endDate2 === undefined"></app-no-data>
+</div>
+<div>
+  <div class="subheading2">Use End Date (Removal of Soil)</div>
   {{ component.endDate | date }}
   <app-no-data *ngIf="component.endDate === null || component.endDate === undefined"></app-no-data>
 </div>
@@ -45,9 +51,7 @@
         </td>
       </tr>
       <tr>
-        <td class="soil-table-label">
-          Area
-        </td>
+        <td class="soil-table-label">Area</td>
         <td>
           <span *ngIf="component.soilToRemoveArea !== null && component.soilToRemoveArea !== undefined">
             {{ component.soilToRemoveArea }} m<sup>2</sup></span
