--- a/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.html
@@ -21,7 +21,26 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="subheading2 grid-1">Placement of Fill Project Duration</div>
+  <div class="grid-double">
+    <div *ngIf="_applicationSubmission.fillProjectDurationAmount && _applicationSubmission.fillProjectDurationUnit">
+      {{ _applicationSubmission.fillProjectDurationAmount }}
+      <ng-container [ngPlural]="_applicationSubmission.fillProjectDurationAmount">
+        <ng-template ngPluralCase="=1">
+          {{ _applicationSubmission.fillProjectDurationUnit.slice(0, -1) | titlecase }}
+        </ng-template>
+        <ng-template ngPluralCase="other">
+          {{ _applicationSubmission.fillProjectDurationUnit | titlecase }}
+        </ng-template>
+      </ng-container>
+    </div>
+    <app-no-data
+      [showRequired]="showErrors"
+      *ngIf="!_applicationSubmission.fillProjectDurationAmount || !_applicationSubmission.fillProjectDurationUnit"
+    ></app-no-data>
+  </div>
+
+  <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
     <div *ngIf="_applicationSubmission.soilProjectDurationAmount && _applicationSubmission.soilProjectDurationUnit">
       {{ _applicationSubmission.soilProjectDurationAmount }}
