--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -1,4 +1,4 @@
-<input type="file" class="file-input" (change)="fileSelected($event)" #fileUpload />
+<input type="file" class="file-input" (change)="fileSelected($event)" #fileUpload aria-label="upload" />
 <div *ngIf="uploadedFiles">
   <ng-container *ngFor="let file of uploadedFiles">
     <div
