Increase Area Fields to 5 decimals
* Adjust lots of fields from 2 -> 5 fields
* Update inline number to accept varying number of decimals

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
@@ -3,5 +3,6 @@
   <app-inline-number
     [value]="component.alrArea?.toString()"
     (save)="onSaveAlrArea($event)"
+    [decimals]="5"
   ></app-inline-number>
 </div>
