--- a/alcs-frontend/src/app/features/notice-of-intent/proposal/parcel-prep/parcel-prep.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/proposal/parcel-prep/parcel-prep.component.html
@@ -36,7 +36,7 @@
   <ng-container matColumnDef="alrArea">
     <th mat-header-cell *matHeaderCellDef>ALR Area (ha)</th>
     <td mat-cell *matCellDef="let row">
-      <app-inline-number [value]="row.alrArea" (save)="saveParcel(row.uuid, $event)"></app-inline-number>
+      <app-inline-number [value]="row.alrArea" (save)="saveParcel(row.uuid, $event)" [decimals]="5"></app-inline-number>
     </td>
   </ng-container>
   <ng-container matColumnDef="owners">
