Resolve accessibility errors and warnings for parcel, incl, and excl

--- a/portal-frontend/src/app/features/applications/edit-submission/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/land-use/land-use.component.html
@@ -122,7 +122,7 @@
     <div class="subtext">Choose the main land use type from the drop-down and describe the specific activities.</div>
     <div class="form-row">
       <div class="full-row">
-        <label for="northLandUseType">North</label>
+        <mat-label for="northLandUseType">North</mat-label>
         <div class="land-use-type-wrapper">
           <div class="land-use-type">
             <mat-form-field appearance="outline">
@@ -147,6 +147,7 @@
                 placeholder="Specific Activity"
                 matInput
                 formControlName="northLandUseTypeDescription"
+                aria-label="North land use type description"
               />
             </mat-form-field>
             <div
@@ -164,7 +165,7 @@
       </div>
 
       <div class="full-row">
-        <label for="eastLandUseType">East</label>
+        <mat-label for="eastLandUseType">East</mat-label>
         <div class="land-use-type-wrapper">
           <div class="land-use-type">
             <mat-form-field appearance="outline">
@@ -189,6 +190,7 @@
                 placeholder="Specific Activity"
                 matInput
                 formControlName="eastLandUseTypeDescription"
+                aria-label="East land use type description"
               />
             </mat-form-field>
             <div
@@ -206,7 +208,7 @@
       </div>
 
       <div class="full-row">
-        <label for="southLandUseType">South</label>
+        <mat-label for="southLandUseType">South</mat-label>
         <div class="land-use-type-wrapper">
           <div class="land-use-type">
             <mat-form-field appearance="outline">
@@ -231,6 +233,7 @@
                 placeholder="Specific Activity"
                 matInput
                 formControlName="southLandUseTypeDescription"
+                aria-label="South land use type description"
               />
             </mat-form-field>
             <div
@@ -248,7 +251,7 @@
       </div>
 
       <div class="full-row">
-        <label for="westLandUseType">West</label>
+        <mat-label for="westLandUseType">West</mat-label>
         <div class="land-use-type-wrapper">
           <div class="land-use-type">
             <mat-form-field appearance="outline">
@@ -273,6 +276,7 @@
                 placeholder="Specific Activity"
                 matInput
                 formControlName="westLandUseTypeDescription"
+                aria-label="West land use type description"
               />
             </mat-form-field>
             <div
