--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -19,13 +19,13 @@
 <form [formGroup]="form">
   <div class="form-row">
     <div class="full-row">
-      <label for="hectares">The governmental or prescribed public body that is applying to exclude land:</label>
+      <label for="prescribedBody">The governmental or prescribed public body that is applying to exclude land:</label>
       <div class="subtext">
         Note: To change this selection, you will need to use the 'Change Application Type' button at the top right of
         the form.
       </div>
       <mat-form-field appearance="outline">
-        <input matInput [value]="prescribedBody ?? ''" disabled />
+        <input matInput [value]="prescribedBody ?? ''" disabled id="prescribedBody" />
       </mat-form-field>
     </div>
     <div>
@@ -50,10 +50,10 @@
       </div>
     </div>
     <div class="full-row">
-      <label for="share-property">
+      <mat-label for="share-property">
         Does any land under application share a common property line with land in another Local or First Nation
         Government?
-      </label>
+      </mat-label>
       <div class="subtext">
         If any property under application shares a common boundary with a neighbouring Local or First Nation Government,
         then that government must be notified of the application and given the opportunity to comment.
@@ -116,7 +116,7 @@
       </div>
     </div>
     <div class="full-row">
-      <label class="subheading2" for="proposal-map">Proposal Map / Site Plan</label>
+      <mat-label class="subheading2" for="proposal-map">Proposal Map / Site Plan</mat-label>
       <div class="subtext">A visual representation of your proposal.</div>
       <app-file-drag-drop
         id="proposal-map"
@@ -149,7 +149,7 @@
   <form>
     <div class="form-row">
       <div class="full-row">
-        <label class="subheading2" for="advertising">Notice of Public Hearing (Advertisement)</label>
+        <mat-label class="subheading2" for="advertising">Notice of Public Hearing (Advertisement)</mat-label>
         <div class="subtext">
           Proof that notice of the application was provided in a form and manner acceptable to the Commission
         </div>
@@ -166,7 +166,7 @@
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
-        <label class="subheading2" for="signage">Proof of Signage</label>
+        <mat-label class="subheading2" for="signage">Proof of Signage</mat-label>
         <div class="subtext">
           Proof that a sign, in a form and manner acceptable to the Commission, was posted on the land that is the
           subject of the application
@@ -184,7 +184,7 @@
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
-        <label class="subheading2" for="report">Report of Public Hearing</label>
+        <mat-label class="subheading2" for="report">Report of Public Hearing</mat-label>
         <div class="subtext">Public hearing report and any other public comments received</div>
         <app-file-drag-drop
           id="report"
