--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-details.component.html
@@ -23,7 +23,7 @@
     </mat-expansion-panel-header>
 
     <app-parcel-entry
-      [isDraft]='draftMode'
+      [isDraft]="draftMode"
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
