Increase color contrast

--- a/portal-frontend/src/styles/colors.scss
+++ b/portal-frontend/src/styles/colors.scss
@@ -20,6 +20,6 @@ $grey-dark: #565656;
 $grey-light: #efefef;
 
 $link-color: #1a5a96;
-$error-color: #d8292f;
+$error-color: #c6242a;
 $success-color: #2e8540;
 $warning-color: #fcba19;
