--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -19,7 +19,7 @@ $link-color: #1a5a96;
 
 $bg-color: #f5f7e7;
 
-$error-color: #d8292f;
+$error-color: #c6242a;
 $success-color: #2e8540;
 $warning-color: #fcba19;
 
