Improve all application type form and contrast accessibility

--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
@@ -2,6 +2,10 @@
 @use '../../../../styles/colors';
 
 :host::ng-deep {
+  .page-title {
+    margin: rem(16) 0 !important;
+  }
+
   .multiple-documents {
     a {
       display: block;
