--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/cove-proposal/cove-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/cove-proposal/cove-proposal.component.html
@@ -153,7 +153,7 @@
         <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
       </div>
       <div class="full-row">
-        <label class="subheading2" for="proposal-map">Proposal Map / Site Plan</label>
+        <mat-label class="subheading2" for="proposal-map">Proposal Map / Site Plan</mat-label>
         <div class="subtext">A visual representation of your proposal.</div>
         <app-file-drag-drop
           id="proposal-map"
@@ -167,7 +167,7 @@
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
-        <label for="hasDraftCopy"> Do you have a draft copy of the covenant? </label>
+        <mat-label for="hasDraftCopy"> Do you have a draft copy of the covenant? </mat-label>
         <div class="subtext">If yes, please attach the Draft in the section below.</div>
         <div>
           <mat-button-toggle-group
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="full-row">
-        <label class="subheading2" for="proposal-map">Draft Covenant</label>
+        <mat-label class="subheading2" for="draftCovenant">Draft Covenant</mat-label>
         <div class="subtext">A visual representation of your proposal.</div>
         <app-file-drag-drop
           id="draftCovenant"
